# EmuCPU

./: .gitignore  CMakeLists.txt  README.md  main.c
.github/workflows/: cmake-single-platform.yml
lib/: cpu.c  cpu.h  isa.c  isa.h  logicb.c  logicb.h  mem.c  mem.h  utils.c  utils.h
